create simple structure of the project, create side arrows

--- a/index.html
+++ b/index.html
@@ -8,6 +8,40 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <div class="calendar__wrapper">
+        <!-- side arrows -->
+        <div class="arrow arrow--position1">
+            <span></span>
+        </div>
+        <div class="arrow arrow--position2">
+            <span></span>
+        </div>
+
+        <!-- calendar -->
+        <div class="calendar">
+            <div class="header">
+                <div class="header__name">
+                    <h2>Terminplaner</h2>
+                    <div class="header__arrows">
+                        <div class="arrow">
+                            <span></span>
+                        </div>
+                        <div class="arrow">
+                            <span></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="header__nav">
+                    <div class="header__dateChange">
+                        change date
+                    </div>
+                </div>
+            </div>
+            
+            <div class="schedule">
     
+            </div>
+        </div>
+    </div>
 </body>
 </html>
