--- a/index.html
+++ b/index.html
@@ -22,24 +22,33 @@
             <div class="header">
                 <div class="header__name">
                     <h2>Terminplaner</h2>
-                    <div class="header__arrows">
-                        <div class="arrow">
+                    <div class="header__doubleArrows">
+                        <div class="arrow arrow--doubleArrow2">
                             <span></span>
                         </div>
-                        <div class="arrow">
+                        <div class="arrow arrow--doubleArrow1">
                             <span></span>
                         </div>
                     </div>
                 </div>
+
                 <div class="header__nav">
                     <div class="header__dateChange">
-                        change date
+                        <div class="header__arrowDate header__arrowDate--left" id="prev"> </div>
+                        <div class="header__days">6 - 12. Juli 2015</div>
+                        <div class="header__arrowDate header__arrowDate--right" id="next"></div>
+                    </div>
+                    <div class="header__iconCalendar">
+                        <svg viewBox="0 0 24 24">
+                            <path d="M6,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM16,6c0,1.1 0.9,2 2,2s2,-0.9 2,-2 -0.9,-2 -2,-2 -2,0.9 -2,2zM12,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2z">
+                            </path>
+                        </svg>
                     </div>
                 </div>
             </div>
             
             <div class="schedule">
-    
+                calendar
             </div>
         </div>
     </div>
