create calendar plan with scroll

--- a/index.html
+++ b/index.html
@@ -48,7 +48,23 @@
             </div>
             
             <div class="schedule">
-                calendar
+                <div class="schedule__daysBox">
+                    <div class="schedule__box">Uhrzeit</div>
+                    <div class="schedule__box">Mo 06.07.</div>
+                    <div class="schedule__box">Di 07.07.</div>
+                    <div class="schedule__box">Mi 08.07.</div>
+                    <div class="schedule__box">Do 09.07.</div>
+                    <div class="schedule__box">Fr 10.07.</div>
+                    <div class="schedule__box">Sa 11.07.</div>
+                    <div class="schedule__box">Sa 12.07.</div>
+                </div>
+                <div class="schedule__content">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores quod impedit quidem, distinctio, itaque nam tenetur inventore repellendus numquam sed optio pariatur nesciunt id possimus, enim ex necessitatibus voluptate quaerat.
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati quidem excepturi beatae id harum ullam, similique fugiat fugit adipisci culpa! In, nisi culpa! Ipsam totam suscipit esse, sed natus quibusdam?
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex perferendis voluptatum aliquid totam explicabo esse laborum dolorum. Dignissimos dolores obcaecati corporis laborum, nam sunt veritatis, in esse mollitia earum natus!
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error assumenda obcaecati similique ducimus commodi praesentium enim voluptatem officia. Quo accusamus a eligendi tempore eveniet veritatis autem, nam magni qui consequatur?
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, earum dicta illo, sapiente sed saepe nobis tempora natus ipsum necessitatibus sequi officia quisquam ipsa repellat impedit soluta ratione recusandae quaerat.
+                </div>
             </div>
         </div>
     </div>
