--- a/index.html
+++ b/index.html
@@ -48,23 +48,49 @@
             </div>
             
             <div class="schedule">
-                <div class="schedule__daysBox">
-                    <div class="schedule__box">Uhrzeit</div>
-                    <div class="schedule__box">Mo 06.07.</div>
-                    <div class="schedule__box">Di 07.07.</div>
-                    <div class="schedule__box">Mi 08.07.</div>
-                    <div class="schedule__box">Do 09.07.</div>
-                    <div class="schedule__box">Fr 10.07.</div>
-                    <div class="schedule__box">Sa 11.07.</div>
-                    <div class="schedule__box">Sa 12.07.</div>
-                </div>
-                <div class="schedule__content">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores quod impedit quidem, distinctio, itaque nam tenetur inventore repellendus numquam sed optio pariatur nesciunt id possimus, enim ex necessitatibus voluptate quaerat.
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati quidem excepturi beatae id harum ullam, similique fugiat fugit adipisci culpa! In, nisi culpa! Ipsam totam suscipit esse, sed natus quibusdam?
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex perferendis voluptatum aliquid totam explicabo esse laborum dolorum. Dignissimos dolores obcaecati corporis laborum, nam sunt veritatis, in esse mollitia earum natus!
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error assumenda obcaecati similique ducimus commodi praesentium enim voluptatem officia. Quo accusamus a eligendi tempore eveniet veritatis autem, nam magni qui consequatur?
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, earum dicta illo, sapiente sed saepe nobis tempora natus ipsum necessitatibus sequi officia quisquam ipsa repellat impedit soluta ratione recusandae quaerat.
-                </div>
+                    <div class="schedule__topInfo">
+                        <div class="schedule__staticBox">
+                            <div class="schedule__box schedule__box--days">Uhrzeit</div>
+                        </div>
+                        <div class="schedule__daysBox">
+                            <div class="schedule__box schedule__box--days">Mo 06.07.</div>
+                            <div class="schedule__box schedule__box--days">Di 07.07.</div>
+                            <div class="schedule__box schedule__box--days">Mi 08.07.</div>
+                            <div class="schedule__box schedule__box--days">Do 09.07.</div>
+                            <div class="schedule__box schedule__box--days">Fr 10.07.</div>
+                            <div class="schedule__box schedule__box--days">Sa 11.07.</div>
+                            <div class="schedule__box schedule__box--days">Sa 12.07.</div>
+                        </div>
+                    </div>
+
+                    <!-- schedule boxes -->
+                    <div class="schedule__boxes">
+                        <div class="schedule__time">
+                            <div class="schedule__box schedule__box--time">06:00</div>
+                            <div class="schedule__box schedule__box--time">07:00</div>
+                            <div class="schedule__box schedule__box--time">08:00</div>
+                            <div class="schedule__box schedule__box--time">09:00</div>
+                            <div class="schedule__box schedule__box--time">10:00</div>
+                            <div class="schedule__box schedule__box--time">11:00</div>
+                            <div class="schedule__box schedule__box--time">12:00</div>
+                            <div class="schedule__box schedule__box--time">13:00</div>
+                            <div class="schedule__box schedule__box--time">14:00</div>
+                            <div class="schedule__box schedule__box--time">15:00</div>
+                            <div class="schedule__box schedule__box--time">16:00</div>
+                            <div class="schedule__box schedule__box--time">17:00</div>
+                            <div class="schedule__box schedule__box--time">18:00</div>
+                            <div class="schedule__box schedule__box--time">19:00</div>
+                            <div class="schedule__box schedule__box--time">20:00</div>
+                        </div>
+                        <div class="schedule__plan">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores quod impedit quidem, distinctio, itaque nam tenetur inventore repellendus numquam sed optio pariatur nesciunt id possimus, enim ex necessitatibus voluptate quaerat.
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati quidem excepturi beatae id harum ullam, similique fugiat fugit adipisci culpa! In, nisi culpa! Ipsam totam suscipit esse, sed natus quibusdam?
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex perferendis voluptatum aliquid totam explicabo esse laborum dolorum. Dignissimos dolores obcaecati corporis laborum, nam sunt veritatis, in esse mollitia earum natus!
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error assumenda obcaecati similique ducimus commodi praesentium enim voluptatem officia. Quo accusamus a eligendi tempore eveniet veritatis autem, nam magni qui consequatur?
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, earum dicta illo, sapiente sed saepe nobis tempora natus ipsum necessitatibus sequi officia quisquam ipsa repellat impedit soluta ratione recusandae quaerat.
+                        </div>
+                    </div>
+                
             </div>
         </div>
     </div>
