create simple grid

--- a/index.html
+++ b/index.html
@@ -83,11 +83,119 @@
                             <div class="schedule__box schedule__box--time">20:00</div>
                         </div>
                         <div class="schedule__plan">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores quod impedit quidem, distinctio, itaque nam tenetur inventore repellendus numquam sed optio pariatur nesciunt id possimus, enim ex necessitatibus voluptate quaerat.
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati quidem excepturi beatae id harum ullam, similique fugiat fugit adipisci culpa! In, nisi culpa! Ipsam totam suscipit esse, sed natus quibusdam?
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex perferendis voluptatum aliquid totam explicabo esse laborum dolorum. Dignissimos dolores obcaecati corporis laborum, nam sunt veritatis, in esse mollitia earum natus!
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error assumenda obcaecati similique ducimus commodi praesentium enim voluptatem officia. Quo accusamus a eligendi tempore eveniet veritatis autem, nam magni qui consequatur?
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, earum dicta illo, sapiente sed saepe nobis tempora natus ipsum necessitatibus sequi officia quisquam ipsa repellat impedit soluta ratione recusandae quaerat.
+                            <!-- 1 day -->
+                            <div class="schedule__dayColumn">
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                            </div>
+
+                            <!-- 2 day -->
+                            <div class="schedule__dayColumn">
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                            </div>
+
+                            <!-- 3 day -->
+                            <div class="schedule__dayColumn">
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                            </div>
+
+                            <!-- 4 day -->
+                            <div class="schedule__dayColumn">
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                            </div>
+
+                            <!-- 5 day -->
+                            <div class="schedule__dayColumn">
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                            </div>
+
+                            <!-- 6 day -->
+                            <div class="schedule__dayColumn">
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                                <div class="schedule__box schedule__box--time"></div>
+                            </div>
                         </div>
                     </div>
                 
