create button, add style, fix bugs

--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
                     </div>
                     <div class="schedule__daysBox">
                         <div class="schedule__box schedule__box--days">Mo 06.07.</div>
-                        <div class="schedule__box schedule__box--days">Di 07.07.</div>
+                        <div class="schedule__box schedule__box--days schedule__activeDay">Di 07.07.</div>
                         <div class="schedule__box schedule__box--days">Mi 08.07.</div>
                         <div class="schedule__box schedule__box--days">Do 09.07.</div>
                         <div class="schedule__box schedule__box--days">Fr 10.07.</div>
-                        <div class="schedule__box schedule__box--days">Sa 11.07.</div>
-                        <div class="schedule__box schedule__box--days">Sa 12.07.</div>
+                        <div class="schedule__box schedule__box--days schedule__box--weekend">Sa 11.07.</div>
+                        <div class="schedule__box schedule__box--days schedule__box--weekend">Sa 12.07.</div>
                     </div>
                 </div>
 
@@ -193,21 +193,21 @@
 
                         <!-- 2 day -->
                         <div class="schedule__dayColumn">
-                            <div class="schedule__box schedule__box--time"></div>
-                            <div class="schedule__box schedule__box--time"></div>
-                            <div class="schedule__box schedule__box--time"></div>
-                            <div class="schedule__box schedule__box--time"></div>
-                            <div class="schedule__box schedule__box--time"></div>
-                            <div class="schedule__box schedule__box--time"></div>
-                            <div class="schedule__box schedule__box--time"></div>
-                            <div class="schedule__box schedule__box--time"></div>
-                            <div class="schedule__box schedule__box--time"></div>
-                            <div class="schedule__box schedule__box--time"></div>
-                            <div class="schedule__box schedule__box--time"></div>
-                            <div class="schedule__box schedule__box--time"></div>
-                            <div class="schedule__box schedule__box--time"></div>
-                            <div class="schedule__box schedule__box--time"></div>
-                            <div class="schedule__box schedule__box--time"></div>
+                            <div class="schedule__box schedule__box--time schedule__activeDay"></div>
+                            <div class="schedule__box schedule__box--time schedule__activeDay"></div>
+                            <div class="schedule__box schedule__box--time schedule__activeDay"></div>
+                            <div class="schedule__box schedule__box--time schedule__activeDay"></div>
+                            <div class="schedule__box schedule__box--time schedule__activeDay"></div>
+                            <div class="schedule__box schedule__box--time schedule__activeDay"></div>
+                            <div class="schedule__box schedule__box--time schedule__activeDay"></div>
+                            <div class="schedule__box schedule__box--time schedule__activeDay"></div>
+                            <div class="schedule__box schedule__box--time schedule__activeDay"></div>
+                            <div class="schedule__box schedule__box--time schedule__activeDay"></div>
+                            <div class="schedule__box schedule__box--time schedule__activeDay"></div>
+                            <div class="schedule__box schedule__box--time schedule__activeDay"></div>
+                            <div class="schedule__box schedule__box--time schedule__activeDay"></div>
+                            <div class="schedule__box schedule__box--time schedule__activeDay"></div>
+                            <div class="schedule__box schedule__box--time schedule__activeDay"></div>
 
                             <!-- tasks -->
                             <div class="schedule__tasks">
@@ -454,9 +454,19 @@
                             <div class="schedule__box schedule__box--time"></div>
                         </div>
                     </div>
+
+                </div>
+
+                <div class="schedule__button">
+                    <button>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </button>
                 </div>
             </div>
         </div>
+
     </div>
 </body>
 </html>
